Ajout de l'endpoint delete/tasks
